--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -30,7 +30,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
-    if: !startsWith(github.ref, 'refs/tags/')  # ignore tag pushes
+    if: github.ref == 'refs/heads/master'
     needs:
     - build
     runs-on: ubuntu-latest
